<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.capstoneproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_allAlamFragment"
            app:destination="@id/allAlamFragment" />
        <action
            android:id="@+id/action_homeFragment_to_allSeniFragment"
            app:destination="@id/allSeniFragment" />
        <action
            android:id="@+id/action_homeFragment_to_allHiburanFragment"
            app:destination="@id/allHiburanFragment" />
        <action
            android:id="@+id/action_homeFragment_to_detailWisataFragment"
            app:destination="@+id/DetailWisataFragment">
            <argument
                android:name="wisataId"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/DetailWisataFragment"
        android:name="com.example.capstoneproject.ui.home.DetailWisataFragment"
        android:label="Detail Wisata">
        <argument
            android:name="wisataId"
            app:argType="integer" />
        <action
            android:id="@+id/action_detailWisataFragment_to_selectPlanFragment"
            app:destination="@id/selectPlanFragment">
            <argument
                android:name="wisataId"
                app:argType="integer" />
        </action>
        <action
            android:id="@+id/action_selectPlanFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_detailFragment_to_detailWisataFragment"
            app:destination="@+id/DetailWisataFragment">
            <argument
                android:name="wisataId"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/selectPlanFragment"
        android:name="com.example.capstoneproject.ui.home.SelectPlanFragment"
        android:label="SelectPlanFragment"
        tools:layout="@layout/fragment_select_plan">
        <action
            android:id="@+id/action_selectPlanFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"/>
        <argument
            android:name="wisataId"
            app:argType="integer" />

    </fragment>

    <!-- Automatic Fragment -->
    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.capstoneproject.ui.explore.ExploreFragment"
        android:label="@string/title_automatic"
        tools:layout="@layout/fragment_explore" />

    <!-- Plan Fragment -->
    <fragment
        android:id="@+id/navigation_plan"
        android:name="com.example.capstoneproject.ui.plan.PlanFragment"
        android:label="@string/title_plan"
        tools:layout="@layout/fragment_plan">
        <action
            android:id="@+id/action_navigation_plan_to_addedPlanFragment"
            app:destination="@id/addedPlanFragment" />
    </fragment>

    <!-- Profile Fragment -->
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.capstoneproject.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <!-- Change Name Fragment -->
    <fragment
        android:id="@+id/navigation_change_name"
        android:name="com.example.capstoneproject.ui.profile.ChangeNameFragment"
        android:label="@string/change_name"
        tools:layout="@layout/fragment_change_name" />

    <!-- Change Email Fragment -->
    <fragment
        android:id="@+id/navigation_change_email"
        android:name="com.example.capstoneproject.ui.profile.ChangeEmailFragment"
        android:label="@string/change_email"
        tools:layout="@layout/fragment_change_email" />

    <!-- Change Password Fragment -->
    <fragment
        android:id="@+id/navigation_change_password"
        android:name="com.example.capstoneproject.ui.profile.ChangePasswordFragment"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_change_password" />

    <!-- All Alam Fragment -->
    <fragment
        android:id="@+id/allAlamFragment"
        android:name="com.example.capstoneproject.ui.home.AllAlamFragment"
        android:label="All Alam" >
        <action
            android:id="@+id/action_allAlamFragment_to_detailWisataFragment"
            app:destination="@id/DetailWisataFragment" />
    </fragment>

    <!-- All Seni Fragment -->
    <fragment
        android:id="@+id/allSeniFragment"
        android:name="com.example.capstoneproject.ui.home.AllSeniFragment"
        android:label="All Seni">
        <action
            android:id="@+id/actionAllSeniFragmentToDetailWisataFragment"
            app:destination="@id/DetailWisataFragment" />
    </fragment>

    <!-- All Hiburan Fragment -->
    <fragment
        android:id="@+id/allHiburanFragment"
        android:name="com.example.capstoneproject.ui.home.AllHiburanFragment"
        android:label="All Hiburan">
        <action
            android:id="@+id/actionAllHiburanFragmentToDetailWisataFragment"
            app:destination="@id/DetailWisataFragment" />
    </fragment>

    <!-- Added Plan Fragment -->
    <fragment
        android:id="@+id/addedPlanFragment"
        android:name="com.example.capstoneproject.ui.plan.AddedPlanFragment"
        tools:layout="@layout/fragment_added_plan">
        <action
            android:id="@+id/action_addedPlanFragment_to_DetailPlanFragment"
            app:destination="@id/DetailPlanFragment" />
        <action
            android:id="@+id/action_addedPlanFragment_to_planFragment"
            app:destination="@+id/navigation_plan"/>
    </fragment>

    <fragment
        android:id="@+id/DetailPlanFragment"
        android:name="com.example.capstoneproject.ui.plan.DetailPlanFragment"
        tools:layout="@layout/fragment_detail_plan">
        <argument
            android:name="planId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/addPlanFragment"
        android:name="com.example.capstoneproject.ui.plan.AddPlanFragment"
        android:label="fragment_add_plan">
        <action
            android:id="@+id/action_addPlanFragment_to_addedPlanFragment"
            app:destination="@id/addedPlanFragment" />
    </fragment>

</navigation>
